# edgeware-node

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  mod.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
client/rpc-core/types/: Cargo.toml
client/rpc-core/types/src/: lib.rs
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
docker/: Dockerfile  docker-compose-3.yml  docker-compose-local.yml  docker-compose.yml  mainnet.yml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: lib.rs
node/cli/res/: beresheet-v53.json  beresheet-v53.raw.json
node/cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
node/consensus-transition/aura/: Cargo.toml
node/consensus-transition/aura/src/: import_queue.rs  lib.rs
node/consensus-transition/manual-seal/: Cargo.toml
node/consensus-transition/manual-seal/src/: error.rs  rpc.rs
node/consensus-transition/manual-seal/src/consensus/: babe.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs  tracing.rs
node/runtime/: Cargo.toml
node/runtime-interface/: Cargo.toml
node/runtime/src/: lib.rs  migrations.rs  precompiles.rs
pallets/edge-treasury-reward/: Cargo.toml
pallets/edge-treasury-reward/src/: lib.rs  mock.rs  tests.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/debug/src/: lib.rs
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/evm-tracing-events/src/: evm.rs  evm_utils.rs  gasometer.rs  lib.rs  runtime.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
scripts/: init.sh
utils/frame/generate-bags/: Cargo.toml
utils/frame/generate-bags/node-runtime/: Cargo.toml
