[workspace]
members = [
	"client/evm-tracing",
	"client/rpc/debug",
	"client/rpc/trace",
	"client/rpc/txpool",
	"client/rpc-core/debug",
	"client/rpc-core/trace",
	"client/rpc-core/txpool",
	"pallets/edge-treasury-reward",
	"node/cli",
	"node/cli-opt",
	"node/executor",
	"primitives/rpc/evm-tracing-events",
	"node/primitives",
	"node/rpc",
	"node/runtime",
	"node/runtime-interface",
	"primitives/rpc/debug",
	"primitives/rpc/txpool",
	"utils/frame/generate-bags",
	"utils/frame/generate-bags/node-runtime",
]
exclude = ["vendor"]

[workspace.dependencies]
# TODO: use workspace dependencies 
#* Dependencies are split into 2 groups: wasm and client

#* -wasm dependencies requires to be no_std compatible, which often requires 'default-features = false'. 
#* when used in a client-side crate the "std" feature should be enabled there if it exists

#* -client dependencies are only used in the client, thus don't need to be no_std compatible

# Edgeware (wasm)
evm-tracing-events = { path = "primitives/rpc/evm-tracing-events", default-features = false }
edgeware-rpc-primitives-debug = { path = "primitives/rpc/debug", default-features = false }
edgeware-rpc-primitives-txpool = { path = "primitives/rpc/txpool", default-features = false }
edgeware-primitives = { path = "node/primitives" }
edgeware-executor = { path = "node/executor" }

# Edgeware (client)
edgeware-cli-opt = { package = "edgeware-cli-opt", path = "node/cli-opt", optional = true }
edgeware-client-evm-tracing = { path = "client/evm-tracing" }
edgeware-rpc-core-debug = { path = "client/rpc-core/debug" }
edgeware-rpc-core-types = { path = "client/rpc-core/types" }
edgeware-rpc-core-trace = { path = "client/rpc-core/trace" }
edgeware-rpc-core-txpool = { path = "client/rpc-core/txpool" }
edgeware-runtime = { path = "node/runtime" }
edgeware-rpc = { path = "node/rpc" }
edgeware-rpc-txpool = { path = "client/rpc/txpool" }
edgeware-rpc-debug = { path = "client/rpc/debug" }
edgeware-rpc-trace = { path = "client/rpc/trace" }
edgeware-runtime-interface = { path = "node/runtime-interface" }
generate-bags = { version = "4.0.0-dev", path = "utils/frame/generate-bags" }

# Substrate (wasm)
parity-scale-codec = { version = "3.2.2", default-features = false, features = [ "derive" ] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-sandbox = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus-manual-seal = { path = "node/consensus-transition/manual-seal", default-features = false }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", features = ["wasmtime"] }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false, features = ["runtime-benchmarks"] }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
treasury-reward = { package = "edge-treasury-reward", path = "pallets/edge-treasury-reward", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }

# Substrate (client)
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", optional = true, features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus-aura = { path = "node/consensus-transition/aura", default-features = false }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus-slots =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", optional = true }
substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", optional = true }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
substrate-wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }

# Frontier (wasm)
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = { version = "0.14", default-features = false }
evm-runtime = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false }
evm-gasometer = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
fp-consensus = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43" }
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", features = ["runtime-benchmarks"], default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }
pallet-evm-precompile-curve25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", default-features = false }

# Frontier (client)
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-0.9.43" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", default-features = false }

# Other (wasm)
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.101", default-features = false }
hex-literal = { version = "0.3.4" }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5", default-features = false }
log = { version = "0.4.17", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
async-trait = "0.1.57"
num_enum = { version = "0.5.1", default-features = false }
safe-mix = { version = "1.0.1", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false, optional = true }
environmental = { version = "1.1.4", default-features = false }
git2 = { version = "0.17.2", default-features = false }

# Other (client)
serde_json = { version = "1.0" }
futures = { version = "0.3.21" }
jsonrpsee = { version = "0.16.2", default-features = false }
tokio = { version = "1.13" }
tracing = "0.1.34"
clap = { version = "4.2.5", features = [ "derive" ], optional = true }
rand = "0.8"
maplit = "1.0.2"
parking_lot = "0.12.0"
tempfile = "3.2.0"
assert_cmd = "2.0.2"
nix = "0.23"
regex = "1.6.0"
platforms = "2.0"
tiny-bip39 = { version = "0.8", default-features = false }
primitive-types = "0.12.0"
url = "2.2.2"
tiny-hderive = "0.3.0"
structopt = "0.3"
thiserror = "1.0"
assert_matches = "1.3.0"
trie-root = "0.16.0"
wabt = "0.10.0"
criterion = "0.4.0"
bstringify = "0.1.2"
integer-sqrt = "0.1.5"
static_assertions = "1.1.0"
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.26"
num-format = "0.4.4"


[profile.release]
# Edgeware runtime requires unwinding.
panic = "unwind"
codegen-units=1

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
