 [package]
name = 'edgeware-cli-opt'
homepage = 'https://edgware.re'
license = 'GPL-3.0-only'
version = '0.14.2'
authors = ["Filip @ Edgeware"]
edition = '2021'

[dependencies]
sp-runtime = { workspace = true }
structopt = { workspace = true }
tiny-bip39 = { workspace = true }
libsecp256k1 = { workspace = true }
primitive-types = { workspace = true }
sha3 = { workspace = true }
tiny-hderive = { workspace = true }
url = { workspace = true }
