[package]
name = "edgeware-executor"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "3.1.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43", features = ["wasmtime"] }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43"  }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }

edgeware-primitives = { version = "4.0.0", path = "../primitives" }
edgeware-runtime = { version = "4.0.0", path = "../runtime" }
edgeware-runtime-interface = { version = "4.0.0", path = "../runtime-interface" }

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-0.9.43" }
wabt = "0.10.0"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
