[package]
name = "edgeware-executor"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = { workspace = true }
parity-scale-codec = { workspace = true }
sp-io = { workspace = true }
sp-state-machine = { workspace = true }
sc-executor = { workspace = true, features = ["wasmtime"] }
sp-core =  { workspace = true  }
sp-trie = { workspace = true }
frame-benchmarking = { workspace = true }

edgeware-primitives = { version = "4.0.0", workspace = true }
edgeware-runtime = { version = "4.0.0", workspace = true }
edgeware-runtime-interface = { version = "4.0.0", workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true }
frame-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-session = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-treasury = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-indices = { workspace = true }
wabt = { workspace = true }
criterion = { workspace = true }

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
