[package]
name = "edgeware-primitives"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime primitives"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bstringify = { workspace = true }
serde = { workspace = true, default-features = false, optional = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
num_enum = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-system = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
#sp-serializer = { workspace = true }
#pretty_assertions = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"parity-scale-codec/std",
	"num_enum/std",
	"scale-info/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
]