[package]
name = "edgeware-rpc"
version = "4.0.0"
authors = [ "Edgeware", "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"

[dependencies]
futures = { workspace = true, features = ["compat"] }
jsonrpsee = { workspace = true }
pallet-contracts-rpc = { workspace = true, default-features = false }
pallet-transaction-payment-rpc = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-consensus-aura = { workspace = true, default-features = false }
sc-consensus-manual-seal = { workspace = true, default-features = false }
sc-consensus-epochs = { workspace = true, default-features = false }
sc-finality-grandpa = { workspace = true, default-features = false }
sc-finality-grandpa-rpc = { workspace = true, default-features = false }
sc-keystore = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-rpc-api = { workspace = true, default-features = false }
sc-rpc = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-consensus = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-core =  { workspace = true  }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }
substrate-frame-rpc-system = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["macros", "sync"] }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
pallet-ethereum = { workspace = true, features = ["runtime-benchmarks"] }
fc-rpc = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fc-rpc-core = { workspace = true, default-features = false }
fc-db = { workspace = true, default-features = false }
fp-storage = { workspace = true, default-features = false }
fc-mapping-sync = { workspace = true, default-features = false }

edgeware-primitives = { workspace = true }
edgeware-runtime = { workspace = true }
edgeware-executor = { workspace = true }
edgeware-cli-opt = { workspace = true }
edgeware-rpc-txpool = { workspace = true }
edgeware-rpc-primitives-txpool = { workspace = true }
edgeware-rpc-debug = { workspace = true }
edgeware-rpc-primitives-debug = { workspace = true }
edgeware-rpc-trace = { workspace = true }
