[package]
name = "edgeware-runtime-interface"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware runtime interface helpers and functions"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-runtime-interface-proc-macro = { workspace = true }
edgeware-primitives = { workspace = true }

[features]
default = [ "std" ]
std = [
  "sp-runtime/std",
  "sp-runtime-interface/std",
]